# microservice-reference

./: .env.example  .gitignore  Makefile  README.md  docker-compose.sqlite.yml  docker-compose.yml  explain.md  gpt.md  instruction.md
apps/api-gateway/: Dockerfile  nginx.conf
apps/notification-service/: Dockerfile  alembic.ini  pyproject.toml
apps/notification-service/alembic/versions/: 0001_baseline.py
apps/notification-service/app/: main.py
apps/notification-service/app/api/v1/: notification_routes.py
apps/notification-service/app/application/services/: notification_service.py
apps/notification-service/app/core/: config.py
apps/notification-service/app/infrastructure/broker/: workers.py
apps/notification-service/app/infrastructure/database/: models.py
apps/notification-service/app/infrastructure/repositories/: __init__.py  notification_repository.py
apps/notification-service/app/schemas/: __init__.py  notification_schema.py
apps/order-service/: Dockerfile  alembic.ini  pyproject.toml
apps/order-service/app/: main.py
apps/payment-service/: Dockerfile  alembic.ini  pyproject.toml
apps/payment-service/app/: main.py
apps/product-service/: Dockerfile  alembic.ini  pyproject.toml
apps/product-service/app/: main.py
apps/user-service/: Dockerfile  alembic.ini  pyproject.toml
docs/: api-contracts.md  event-catalog.md
frontend/react-app/: index.html  package-lock.json  package.json
infrastructure/nginx/: nginx.conf
infrastructure/scripts/: create-dbs.sql
libs/common/: __init__.py
libs/contracts/: __init__.py
(+84 files in other folders)
