[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "notification-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.0",
  "psycopg2-binary>=2.9.0",
  "pydantic[email]>=2.8.0",
  "httpx>=0.27.0",
  "pika>=1.3.2",
  "alembic>=1.13.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]
